Made it store the names of the datasets

--- a/app/views/status/datasets.html.erb
+++ b/app/views/status/datasets.html.erb
@@ -4,7 +4,7 @@
     <td class="downloaded-and-recent">
 
       <h1>
-        Download & Recent
+        Downloaded & Recent
       </h1>
 
       <h2>
